--- a/.gitmodules
+++ b/.gitmodules
@@ -36,10 +36,10 @@
 	url = https://github.com/scrooloose/syntastic.git
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
-	url = git@github.com:kien/ctrlp.vim.git
+	url = https://github.com/kien/ctrlp.vim.git
 [submodule "bundle/powerline"]
 	path = bundle/powerline
-	url = git@github.com:powerline/powerline.git
+	url = https://github.com/powerline/powerline.git
 [submodule "bundle/vim-airline"]
 	path = bundle/vim-airline
 	url = https://github.com/vim-airline/vim-airline
