Murray's Rule: 	Any country with "democratic" in the title isn't.

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,9 @@
 [submodule "/home/dem4ply/.vim/bundle/vimproc.vim"]
 	path = /home/dem4ply/.vim/bundle/vimproc.vim
 	url = https://github.com/Shougo/vimproc.vim.git
+[submodule "bundle/sparkup"]
+	path = bundle/sparkup
+	url = https://github.com/rstacruz/sparkup.git
+[submodule "bundle/vim-vue"]
+	path = bundle/vim-vue
+	url = https://github.com/posva/vim-vue.git
